# intro-to-genai-in-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.yaml
src/chatbot/: chat_context.py  chat_history.py  chatbot_base.py  config.py  start_chat.py
src/chatbot/lessons/exercises/e00_intro/: README.md
src/chatbot/lessons/exercises/e01_prompting/: README.md  chatbot.py
src/chatbot/lessons/exercises/e02_system_prompt/: README.md  chatbot.py
src/chatbot/lessons/exercises/e03_conversation_history/: README.md  chatbot.py
src/chatbot/lessons/exercises/e04_structured_outputs/: README.md  chatbot.py
src/chatbot/lessons/exercises/e05_tool_calling/: README.md  chatbot.py
src/chatbot/lessons/exercises/e06_custom_agent/: README.md  __main__.py  chatbot.py  reviewer.py
src/chatbot/lessons/exercises/e06_mcp/: README.md  chatbot.py
src/chatbot/lessons/exercises/e07_rag/: README.md  chatbot.py
src/chatbot/lessons/exercises/e08_custom_agent/: README.md  __main__.py  chatbot.py
src/chatbot/lessons/solutions/s01_prompting/: README.md  chatbot.py
src/chatbot/lessons/solutions/s02_system_prompt/: README.md  __main__.py  chatbot.py
src/chatbot/lessons/solutions/s03_conversation_history/: README.md
src/chatbot/lessons/solutions/s04_structured_outputs/: README.md  tests.py
src/chatbot/lessons/solutions/s05_tool_calling/: README.md  chatbot.py
src/chatbot/lessons/solutions/s06_custom_agent/: README.md  state.py
src/chatbot/lessons/solutions/s06_mcp/: README.md  chatbot.py  mcp_server.py
src/chatbot/lessons/solutions/s07_rag/: README.md  chatbot.py
src/chatbot/lessons/solutions/s08_custom_agent/: README.md  chatbot.py  reviewer.py
src/chatbot/lessons/step0_intro/: README.md  chatbot.py
src/chatbot/lessons/step1_prompting/: README.md
src/chatbot/lessons/step1_prompting_solution/: README.md
src/chatbot/lessons/step2_system_prompt/: README.md  __main__.py
src/chatbot/lessons/step2_system_prompt_solution/: README.md
src/chatbot/lessons/step3_conversation_history/: README.md  chatbot.py
src/chatbot/lessons/step3_conversation_history_solution/: README.md  chatbot.py
src/chatbot/lessons/step4_structured_outputs/: README.md
src/chatbot/lessons/step4_structured_outputs_solution/: README.md  chatbot.py
src/chatbot/lessons/step5_tool_calling/: README.md  chatbot.py
src/chatbot/lessons/step5_tool_calling_solution/: README.md  chatbot.py
src/chatbot/lessons/step6_custom_agent/: README.md  author.py
src/chatbot/lessons/step6_custom_agent_solution/: README.md  chatbot.py
src/chatbot/services/: authenticator.py  embeddings.py  llm.py  local_embeddings.py  local_llm.py  local_vectordb.py  mcp_client.py  remote_embeddings.py  remote_llm.py  vectordb.py
src/chatbot/testing/: README.md  evaluator.py
src/chatbot/utils/: console.py  logging.py
src/user_interface/: __main__.py  app.py  select_chatbot.py
