[project]
name = "python-genai-intro"
version = "0.1.0"
description = "Introduction to programming Gen-AI applications in Python"
authors = [{ name = "Matei Tene", email = "matei.tene@gmail.com" }]
requires-python = ">=3.13,<4.0.0"
readme = "README.md"
dependencies = [
    "streamlit~=1.50.0",
    "streamlit-chat~=0.1.1",
    "langgraph~=1.0.4",
    "langchain-openai~=1.1.0",
    "pydantic~=2.12.5",
    "pyyaml~=6.0.3",
    "rich~=14.1.0",
    "tzdata~=2025.2",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.14.7",
    "pyright~=1.1.407",
]

[project.scripts]
genai-chat = "user_interface.__main__:main"
exercise-0 = "chatbot.lessons.exercises.e00_intro.__main__:main"
exercise-1 = "chatbot.lessons.exercises.e01_prompting.__main__:main"
solution-1 = "chatbot.lessons.solutions.s01_prompting.__main__:main"
exercise-2 = "chatbot.lessons.exercises.e02_system_prompt.__main__:main"
solution-2 = "chatbot.lessons.solutions.s02_system_prompt.__main__:main"
exercise-3 = "chatbot.lessons.exercises.e03_conversation_history.__main__:main"
solution-3 = "chatbot.lessons.solutions.s03_conversation_history.__main__:main"
exercise-4 = "chatbot.lessons.exercises.e04_structured_outputs.__main__:main"
solution-4 = "chatbot.lessons.solutions.s04_structured_outputs.__main__:main"
exercise-5 = "chatbot.lessons.exercises.e05_tool_calling.__main__:main"
solution-5 = "chatbot.lessons.solutions.s05_tool_calling.__main__:main"
exercise-6 = "chatbot.lessons.exercises.e06_custom_agent.__main__:main"
solution-6 = "chatbot.lessons.solutions.s06_custom_agent.__main__:main"

[tool.hatch.build.targets.sdist]
include = [
    "src/user_interface",
    "src/chatbot",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/user_interface",
    "src/chatbot",
]

[tool.hatch.build.targets.wheel.sources]
"src/user_interface" = "user_interface"
"src/chatbot" = "chatbot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
